media-stack/sweeparr/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sweeparr
  namespace: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sweeparr
  template:
    metadata:
      labels:
        app: sweeparr
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
      containers:
        - name: sweeparr
          image: ghcr.io/jtmb/sweeparr:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sweeparr-data-pvc
