media-stack/sweeparr/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sweeparr-service
  namespace: media-stack
spec:
  selector:
    app: sweeparr
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
